# Seam-Resize

./: CMakeLists.txt  main.cpp  seam.ipynb  test.py
